--- a/.gitignore
+++ b/.gitignore
@@ -1,26 +1,4 @@
-# Prerequisites
-*.d
-
-# Object files
-*.o
-*.ko
-*.obj
-*.elf
-
-# Linker output
-*.ilk
-*.map
-*.exp
-
-# Precompiled Headers
-*.gch
-*.pch
-
-# Libraries
-*.lib
-*.a
-*.la
-*.lo
+code soutenance 
 
 # Shared objects (inc. Windows DLLs)
 *.dll
